[package]
name = "periphery_core"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
terminal_cli = "^0.2.0"
packed_struct = "^0.1.0"
packed_struct_codegen = "^0.1.0"
periphery_buspirate_parser = { path = "../periphery_features/buspirate_parser/" }

[features]
default = ["std"]
std = ["packed_struct/std", "packed_struct_codegen/std"]
#no_std = ["packed_struct/core_collections", "packed_struct_codegen/core_collections"]
