[package]
name = "apds_9960"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
periphery_core = {path = "../../periphery_core/" }
packed_struct = "^0.1.0"
packed_struct_codegen = "^0.1.0"

autogain = {path = "../../periphery_features/autogain/" }
# gesture_detection = { path = "../../periphery_features/gesture_detection" }

[lib]
name = "apds_9960"
path = "lib.rs"
