[package]
name = "fusb302"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
periphery_core = {path = "../../periphery_core/" }
packed_struct = "^0.1.0"
packed_struct_codegen = "^0.1.0"
usb_pd = { path = "../../periphery_features/usb_pd/" }

[lib]
name = "fusb302"
path = "lib.rs"
