[package]
name = "usb_pd"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
packed_struct = "^0.1.0"
packed_struct_codegen = "^0.1.0"

crc = "1.5.0"

fsm = { git = "https://github.com/hashmismatch/fsm.rs" }
fsm_codegen = { git = "https://github.com/hashmismatch/fsm.rs" }